<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ExpensesTracker</string>
    <string name="go_back">Go back</string>
    <string name="delete_expense">Delete expense</string>
    <string name="add_new_month">Add new month</string>
    <string name="add_new_expense">Add new expense</string>
    <string name="expense_details">Expense details</string>
    <string name="expense_title">Expense title</string>
    <string name="current_value">Current value</string>
    <string name="extra_value">Extra value</string>
    <string name="save_changes">Save changes</string>
    <string name="edit_month">Edit month</string>
    <string name="month_name">Month name</string>
    <string name="delete_month">Delete month</string>
    <string name="expense_value">Expense value</string>
    <string name="add_expense">Add expense</string>
    <string name="add_first_expense">Add first expense</string>
    <string name="expenses_tracker">Expenses tracker</string>
    <string name="add_first_month">Add first month</string>
    <string name="settings">Settings</string>
    <string name="app_language">App language</string>
    <string name="english">English</string>
    <string name="serbian">Srpski</string>
    <string name="app_currency">App currency</string>
    <string name="months">Months</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="backup_data_now">Backup data now</string>
    <string name="get_data_from_server">Get data from server</string>
    <string name="auto_backup">Auto backup</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="groceries">Groceries</string>
    <string name="add_first_grocery">Add first grocery</string>
    <string name="add_new_grocery">Add new grocery</string>
    <string name="checkbox">checkbox</string>
    <string name="grocery_name">Grocery name</string>
    <string name="edit_grocery">Edit grocery</string>
    <string name="delete_grocery">Delete grocery</string>
    <string name="graph">Graph</string>
    <string name="check_all">Check all</string>
</resources>